k8s/notes.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes
  labels:
    app: notes
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: notes

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes
  labels:
    app: notes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
        - name: notes
          image: aaramg/notes:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          command: ["/usr/bin/java", "-jar", "/notes.jar"]
          args:
            - --spring.config.location=/mnt/config/application.properties
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt/config
              name: config
      volumes:
        - name: config
          configMap:
            name: notes-configmap
